# supply_chain_envi

./: .dockerignore  .env.example  .gitignore  Dockerfile  HF_SPACES_DEPLOYMENT.md  README.md  __init__.py  client.py  graders.py  inference.py  pyproject.toml  setup.sh
models/: .env.example  .gitignore  README.md  __init__.py  model_loader.py  setup_model.py
server/: app.py
server/static/: dashboard.html
server/static/assets/: chart-config.js  style.css
supply_chain_env/: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  validate-submission.sh
supply_chain_env/server/: app.py  environment.py  requirements.txt
supply_chain_env/tests/: test_environment.py
tests/: test_graders.py
