[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "supply-chain-env"
version = "1.0.0"
description = "Supply Chain Disruption Management — OpenEnv RL Environment"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"

dependencies = [
    # OpenEnv core
    "openenv-core>=0.2.0",

    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",

    # Data / types
    "pydantic>=2.6.0",
    "numpy>=1.26.0",

    # HTTP clients
    "requests>=2.31.0",
    "aiohttp>=3.9.0",

    # LLM inference (OpenAI-compatible)
    "openai>=1.20.0",

    # Model support (Hugging Face)
    "huggingface_hub>=0.21.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",

    # YAML
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",          # for FastAPI TestClient
]
models = [
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "huggingface_hub>=0.21.0",
]
all = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "huggingface_hub>=0.21.0",
]

[project.scripts]
supply-chain-env = "server.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["supply_chain_env*", "server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
